--- a/package.json
+++ b/package.json
@@ -1,56 +1,56 @@
 {
-  "name": "shellies-ds9",
-  "version": "1.1.9",
-  "description": "Handles communication with the next generation of Shelly devices",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "files": [
-    "dist/**/*"
-  ],
-  "scripts": {
-    "build": "rimraf ./dist && tsc",
-    "lint": "eslint ./src --ext .ts,.js --max-warnings=0",
-    "test": "jest",
-    "preversion": "npm run build && npm run lint && npm test",
-    "postversion": "git push && git push --tags",
-    "pretty": "prettier --write \"./**/*.{js,jsx,json}\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cubi1337/node-shellies-ds9.git"
-  },
-  "keywords": [
-    "shelly"
-  ],
-  "author": "Alexander Rydén/ David S.",
-  "license": "GPL-3.0",
-  "bugs": {
-    "url": "https://github.com/cubi1337/node-shellies-ds9/issues"
-  },
-  "homepage": "https://github.com/cubi1337/node-shellies-ds9#readme",
-  "funding": {
-    "type": "kofi",
-    "url": "https://ko-fi.com/cubi1337"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.5.11",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
-    "eslint": "^8.55.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "jest": "^29.7.0",
-    "prettier": "^3.1.0",
-    "rimraf": "^5.0.5",
-    "ts-jest": "^29.1.1",
-    "typescript": "^4.7.4"
-  },
-  "dependencies": {
-    "@types/multicast-dns": "^7.2.4",
-    "eventemitter3": "^5.0.1",
-    "fast-deep-equal": "^3.1.3",
-    "json-rpc-2.0": "^1.7.0",
-    "multicast-dns": "^7.2.5",
-    "ws": "^8.14.2"
-  }
+    "name": "shellies-ds9",
+    "version": "1.1.9",
+    "description": "Handles communication with the next generation of Shelly devices",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "files": [
+        "dist/**/*"
+    ],
+    "scripts": {
+        "build": "rimraf ./dist && tsc",
+        "lint": "eslint ./src --ext .ts,.js --max-warnings=0",
+        "test": "jest",
+        "preversion": "npm run build && npm run lint && npm test",
+        "postversion": "git push && git push --tags",
+        "pretty": "prettier --write \"./**/*.{js,jsx,json}\""
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/cubi1337/node-shellies-ds9.git"
+    },
+    "keywords": [
+        "shelly"
+    ],
+    "author": "Alexander Rydén/ David S.",
+    "license": "GPL-3.0",
+    "bugs": {
+        "url": "https://github.com/cubi1337/node-shellies-ds9/issues"
+    },
+    "homepage": "https://github.com/cubi1337/node-shellies-ds9#readme",
+    "funding": {
+        "type": "kofi",
+        "url": "https://ko-fi.com/cubi1337"
+    },
+    "devDependencies": {
+        "@types/jest": "^29.5.11",
+        "@typescript-eslint/eslint-plugin": "^6.13.2",
+        "@typescript-eslint/parser": "^6.13.2",
+        "eslint": "^8.55.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.0.1",
+        "jest": "^29.7.0",
+        "prettier": "3.6.0",
+        "rimraf": "^5.0.5",
+        "ts-jest": "^29.1.1",
+        "typescript": "^4.7.4"
+    },
+    "dependencies": {
+        "@types/multicast-dns": "^7.2.4",
+        "eventemitter3": "^5.0.1",
+        "fast-deep-equal": "^3.1.3",
+        "json-rpc-2.0": "^1.7.0",
+        "multicast-dns": "^7.2.5",
+        "ws": "^8.14.2"
+    }
 }
