--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     ],
     "scripts": {
         "build": "rimraf ./dist && tsc",
-        "lint": "eslint ./src --ext .ts,.js --max-warnings=0",
+        "lint": "eslint \"src/**/*.{ts,js}\" --max-warnings=0",
         "test": "jest",
         "preversion": "npm run build && npm run lint && npm test",
         "postversion": "git push && git push --tags",
@@ -33,17 +33,16 @@
         "url": "https://ko-fi.com/cubi1337"
     },
     "devDependencies": {
+        "@eslint/js": "9.29.0",
         "@types/jest": "^29.5.11",
-        "@typescript-eslint/eslint-plugin": "^6.13.2",
-        "@typescript-eslint/parser": "^6.13.2",
-        "eslint": "^8.55.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.0.1",
+        "eslint": "9.29.0",
         "jest": "^29.7.0",
+        "jiti": "2.4.2",
         "prettier": "3.6.0",
         "rimraf": "^5.0.5",
         "ts-jest": "^29.1.1",
-        "typescript": "^4.7.4"
+        "typescript": "^4.7.4",
+        "typescript-eslint": "8.34.1"
     },
     "dependencies": {
         "@types/multicast-dns": "^7.2.4",
