--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     ],
     "scripts": {
         "build": "rimraf ./dist && tsc",
+        "cq:all": "npm run cq:tsc && npm run cq:eslint && npm run cq:prettier",
         "cq:eslint": "eslint \"src/**/*.{ts,js}\" --max-warnings=0",
         "cq:eslint:fix": "eslint \"src/**/*.{ts,js}\" --fix",
-        "test": "jest",
-        "preversion": "npm run build && npm run cq:eslint && npm test",
+        "cq:prettier": "prettier --check \"src/**/*.{ts,js,json}\"",
+        "cq:prettier:fix": "prettier --write \"src/**/*.{ts,js,json}\"",
+        "cq:tsc": "tsc --noEmit",
         "postversion": "git push && git push --tags",
-        "pretty": "prettier --write \"./**/*.{js,jsx,json}\""
+        "pretty": "prettier --write \"./**/*.{js,jsx,json}\"",
+        "preversion": "npm run build && npm run cq:eslint && npm test",
+        "test": "jest"
     },
     "repository": {
         "type": "git",
