--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "cq:tsc": "tsc --noEmit",
         "postversion": "git push && git push --tags",
         "preversion": "npm run build && npm run cq:eslint && npm test",
-        "test": "jest"
+        "test": "vitest run",
+        "test:watch": "vitest",
+        "test:ui": "vitest --ui"
     },
     "repository": {
         "type": "git",
@@ -42,15 +44,15 @@
     "homepage": "https://github.com/lucavb/node-shellies-ds9#readme",
     "devDependencies": {
         "@eslint/js": "9.29.0",
-        "@types/jest": "^29.5.11",
+        "@types/node": "24.0.3",
+        "@vitest/ui": "3.2.4",
         "eslint": "9.29.0",
-        "jest": "^29.7.0",
         "jiti": "2.4.2",
         "prettier": "3.6.0",
         "rimraf": "^5.0.5",
-        "ts-jest": "^29.1.1",
         "typescript": "^4.7.4",
-        "typescript-eslint": "8.34.1"
+        "typescript-eslint": "8.34.1",
+        "vitest": "3.2.4"
     },
     "dependencies": {
         "@types/multicast-dns": "^7.2.4",
