--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
         "eslint": "9.29.0",
         "jiti": "2.4.2",
         "prettier": "3.6.0",
-        "rimraf": "^5.0.5",
-        "typescript": "^4.7.4",
+        "rimraf": "6.0.1",
+        "typescript": "5.8.3",
         "typescript-eslint": "8.34.1",
         "vitest": "3.2.4"
     },
@@ -60,6 +60,6 @@
         "fast-deep-equal": "^3.1.3",
         "json-rpc-2.0": "^1.7.0",
         "multicast-dns": "^7.2.5",
-        "ws": "^8.14.2"
+        "ws": "8.18.2"
     }
 }
