--- a/package.json
+++ b/package.json
@@ -2,13 +2,26 @@
     "name": "@lucavb/shellies-ds9",
     "version": "1.1.9",
     "description": "Handles communication with the next generation of Shelly devices",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
+    "main": "./dist/index.js",
+    "module": "./dist/index.mjs",
+    "types": "./dist/index.d.ts",
+    "exports": {
+        ".": {
+            "import": {
+                "types": "./dist/index.d.mts",
+                "default": "./dist/index.mjs"
+            },
+            "require": {
+                "types": "./dist/index.d.ts",
+                "default": "./dist/index.js"
+            }
+        }
+    },
     "files": [
         "dist/**/*"
     ],
     "scripts": {
-        "build": "rimraf ./dist && tsc",
+        "build": "tsup src/index.ts --format cjs,esm --dts --clean --sourcemap",
         "cq:all": "npm run cq:tsc && npm run cq:eslint && npm run cq:prettier",
         "cq:eslint": "eslint \"src/**/*.{ts,js}\" --max-warnings=0",
         "cq:eslint:fix": "eslint \"src/**/*.{ts,js}\" --fix",
@@ -50,6 +63,7 @@
         "jiti": "2.4.2",
         "prettier": "3.6.0",
         "rimraf": "6.0.1",
+        "tsup": "8.5.0",
         "typescript": "5.8.3",
         "typescript-eslint": "8.34.1",
         "vitest": "3.2.4"
