--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,19 @@
 {
     "compilerOptions": {
-        "target": "ES2018",
-        "module": "commonjs",
-        "lib": ["es2015", "es2016", "es2017", "es2018"],
         "declaration": true,
         "declarationMap": true,
-        "sourceMap": true,
+        "esModuleInterop": true,
+        "experimentalDecorators": true,
+        "forceConsistentCasingInFileNames": true,
+        "lib": ["es2015", "es2016", "es2017", "es2018"],
+        "module": "commonjs",
+        "noImplicitAny": false,
         "outDir": "./dist",
         "rootDir": "./src",
+        "skipLibCheck": true,
+        "sourceMap": true,
         "strict": true,
-        "esModuleInterop": true,
-        "noImplicitAny": false,
-        "experimentalDecorators": true
+        "target": "ES2020"
     },
     "include": ["src/"],
     "exclude": ["**/*.spec.ts"]
