--- a/package.json
+++ b/package.json
@@ -2,9 +2,18 @@
     "name": "@lucavb/shellies-ds9",
     "version": "1.1.9",
     "description": "Handles communication with the next generation of Shelly devices",
-    "main": "./dist/index.js",
-    "module": "./dist/index.mjs",
-    "types": "./dist/index.d.ts",
+    "keywords": [
+        "shelly"
+    ],
+    "homepage": "https://github.com/lucavb/node-shellies-ds9#readme",
+    "bugs": {
+        "url": "https://github.com/lucavb/node-shellies-ds9/issues"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/lucavb/node-shellies-ds9.git"
+    },
+    "license": "GPL-3.0",
     "exports": {
         ".": {
             "import": {
@@ -17,6 +26,9 @@
             }
         }
     },
+    "main": "./dist/index.js",
+    "module": "./dist/index.mjs",
+    "types": "./dist/index.d.ts",
     "files": [
         "dist/**/*"
     ],
@@ -28,33 +40,20 @@
         "cq:prettier": "prettier --check \"src/**/*.{ts,js,json}\"",
         "cq:prettier:fix": "prettier --write \"src/**/*.{ts,js,json}\"",
         "cq:tsc": "tsc --noEmit",
-        "postversion": "git push && git push --tags",
-        "preversion": "npm run build && npm run cq:eslint && npm test",
         "test": "vitest run",
+        "test:ui": "vitest --ui",
         "test:watch": "vitest",
-        "test:ui": "vitest --ui"
+        "preversion": "npm run build && npm run cq:eslint && npm test",
+        "postversion": "git push && git push --tags"
     },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/lucavb/node-shellies-ds9.git"
+    "dependencies": {
+        "@types/multicast-dns": "^7.2.4",
+        "eventemitter3": "^5.0.1",
+        "fast-deep-equal": "^3.1.3",
+        "json-rpc-2.0": "^1.7.0",
+        "multicast-dns": "^7.2.5",
+        "ws": "8.18.2"
     },
-    "keywords": [
-        "shelly"
-    ],
-    "authors": [
-        "Alexander Rydén",
-        "David S.",
-        {
-            "name": "Luca Becker",
-            "email": "hello@luca-becker.me",
-            "url": "https://luca-becker.me"
-        }
-    ],
-    "license": "GPL-3.0",
-    "bugs": {
-        "url": "https://github.com/lucavb/node-shellies-ds9/issues"
-    },
-    "homepage": "https://github.com/lucavb/node-shellies-ds9#readme",
     "devDependencies": {
         "@eslint/js": "9.29.0",
         "@types/node": "24.0.3",
@@ -68,12 +67,13 @@
         "typescript-eslint": "8.34.1",
         "vitest": "3.2.4"
     },
-    "dependencies": {
-        "@types/multicast-dns": "^7.2.4",
-        "eventemitter3": "^5.0.1",
-        "fast-deep-equal": "^3.1.3",
-        "json-rpc-2.0": "^1.7.0",
-        "multicast-dns": "^7.2.5",
-        "ws": "8.18.2"
-    }
+    "authors": [
+        "Alexander Rydén",
+        "David S.",
+        {
+            "name": "Luca Becker",
+            "email": "hello@luca-becker.me",
+            "url": "https://luca-becker.me"
+        }
+    ]
 }
