--- a/package.json
+++ b/package.json
@@ -83,6 +83,9 @@
         "typescript-eslint": "8.34.1",
         "vitest": "3.2.4"
     },
+    "publishConfig": {
+        "access": "public"
+    },
     "authors": [
         "Alexander Rydén",
         "David S.",
