--- a/package.json
+++ b/package.json
@@ -63,15 +63,15 @@
         "postversion": "git push && git push --tags"
     },
     "dependencies": {
-        "eventemitter3": "^5.0.1",
-        "fast-deep-equal": "^3.1.3",
-        "json-rpc-2.0": "^1.7.0",
-        "multicast-dns": "^7.2.5",
+        "eventemitter3": "5.0.1",
+        "fast-deep-equal": "3.1.3",
+        "json-rpc-2.0": "1.7.0",
+        "multicast-dns": "7.2.5",
         "ws": "8.18.2"
     },
     "devDependencies": {
         "@eslint/js": "9.29.0",
-        "@types/multicast-dns": "^7.2.4",
+        "@types/multicast-dns": "7.2.4",
         "@types/node": "24.0.3",
         "@vitest/ui": "3.2.4",
         "eslint": "9.29.0",
